@@ -2,6 +2,9 @@
 	Media Player added.
 	Only Play/ Pause & FF, no REW.
 	OSD made for 576i !!
+	Bugfix EPG info, now it should show the now/next info of the current channel.
+
+	Split portal into webkit (html) and svg version
 
 0.03	Release date 2012/12/13
 	Try to fix Teletext crash.
